<resources>
    <string name="app_name">kursovaya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workout">Тренировки</string>
    <string name="addnewday">addNewDay</string>
    <string name="checkbox">checkbox</string>
    <string name="exercises">Упражнения</string>
    <string name="backReady"><![CDATA[< Готово]]></string>
    <string name="add_new_exercise">add new exercise</string>
    <string name="exercise_image">exercise image</string>
    <string name="backArrow"><![CDATA[<]]></string>
    <string name="exercise_img">Exercise image</string>
    <string name="sets">Подходы</string>
    <string name="reps">Повторения</string>
    <string name="kg">Килограммы</string>
    <string name="addExercise">Добавить</string>
    <string name="startTrain">Начать тренировку</string>
    <string name="repsNeed">Повторений требуется</string>
    <string name="setsNeed">Подходы</string>
    <string name="next_exercise">next exercise</string>
    <string name="addfood">addFood</string>
    <string name="food_image">food image</string>
    <string name="_100gramm">100</string>
    <string name="gramm">г</string>
</resources>