<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#05071D"
    tools:context=".AddExerciseFragment">

    <Button
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/backArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_exercise"
        style="@style/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Жим от груди" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_exercise"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="#1E2A36"
        app:cardCornerRadius="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_exercise"
        tools:layout_editor_absoluteX="0dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="26dp"
            app:cardCornerRadius="32dp">

            <ImageView
                android:id="@+id/iv_exercise"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/exercise_img"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />


        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#1E2A36"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/cv_exercise">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/sets"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="#D9D9D9"
            android:textSize="16sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/reps"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="#D9D9D9"
            android:textSize="16sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/kg"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="#D9D9D9"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="#1E2A36"
        app:cardCornerRadius="32dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="0dp">

        <Button
            style="@style/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:background="@drawable/button_background"
            android:text="@string/addExercise"
            android:theme="@style/buttonAdd" />


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>